--- a/index.html
+++ b/index.html
@@ -9,7 +9,26 @@
 </head>
 <body>
 
-    div.
+<div class="slider">
+    <div class="slider__slides">
+        <div class="slider__slide slide">
+            <h2 class="slide__hdl">Lorem ipsum dolor.</h2>
+            <p class="slide__text">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            <a href="" class="slide__link">Read more</a></div>
+        <div class="slider__slide slide">
+            <h2 class="slide__hdl">Lorem ipsum.</h2>
+            <p class="slide__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis!</p>
+            <a href="" class="slide__link">Read more</a></div>
+        <div class="slider__slide slide">
+            <h2 class="slide__hdl">Lorem ipsum.</h2>
+            <p class="slide__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, distinctio.</p>
+            <a href="" class="slide__link">Read more</a></div>
+    </div>
+    <nav class="slider_nav nav">
+        <button class="nav_btn">Prev</button>
+        <button class="nav_btn nav__btn--next">Next</button>
+    </nav>
+</div>
 
 </body>
 </html>
