--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
+    <link rel="stylesheet" href="src/styles/normalize.css">
+    <link rel="stylesheet" href="src/styles/styles.css">
 </head>
 <body>
 
 <div class="slider">
+
     <div class="slider__slides">
         <div class="slider__slide slide">
             <h2 class="slide__hdl">Lorem ipsum dolor.</h2>
